--- a/index.html
+++ b/index.html
@@ -718,40 +718,40 @@
             display: flex;
             align-items: center;
             gap: 15px;
-            margin-bottom: 25px;
-            padding-bottom: 15px;
+            margin-bottom: 20px;
+            padding-bottom: 12px;
             border-bottom: 2px solid var(--border);
         }
 
         .skill-category-header i {
-            font-size: 1.8rem;
+            font-size: 1.6rem;
             color: var(--primary);
             background: var(--primary-light);
-            padding: 12px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 123, 255, 0.15);
+            padding: 10px;
+            border-radius: 10px;
+            box-shadow: 0 3px 10px rgba(0, 123, 255, 0.15);
         }
 
         .skill-category-header h3 {
             margin: 0;
             color: var(--text);
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             font-weight: 700;
         }
 
         .skills-grid {
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 12px;
         }
 
         .skill-item {
             display: flex;
-            align-items: flex-start;
+            align-items: center;
             gap: 15px;
-            padding: 20px;
+            padding: 15px;
             background: var(--bg);
-            border-radius: 16px;
+            border-radius: 12px;
             border: 1px solid var(--border);
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             position: relative;
@@ -782,14 +782,14 @@
 
         .skill-icon {
             flex-shrink: 0;
-            width: 50px;
-            height: 50px;
+            width: 45px;
+            height: 45px;
             background: var(--gradient-primary);
-            border-radius: 12px;
+            border-radius: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 6px 20px rgba(0, 123, 255, 0.2);
+            box-shadow: 0 4px 15px rgba(0, 123, 255, 0.2);
             transition: all 0.3s ease;
         }
 
@@ -808,17 +808,10 @@
         }
 
         .skill-content h4 {
-            margin: 0 0 8px 0;
+            margin: 0;
             color: var(--text);
             font-size: 1.1rem;
             font-weight: 700;
-        }
-
-        .skill-content p {
-            margin: 0 0 12px 0;
-            color: var(--text-light);
-            font-size: 0.9rem;
-            line-height: 1.5;
         }
 
         .skill-projects {
@@ -1883,46 +1876,37 @@
             .skill-category-header {
                 flex-direction: column;
                 text-align: center;
-                gap: 10px;
+                gap: 8px;
             }
 
             .skill-category-header i {
-                font-size: 1.5rem;
-                padding: 10px;
+                font-size: 1.4rem;
+                padding: 8px;
             }
 
             .skill-category-header h3 {
-                font-size: 1.2rem;
+                font-size: 1.1rem;
             }
 
             .skill-item {
                 flex-direction: column;
                 text-align: center;
-                gap: 12px;
-                padding: 16px;
+                gap: 10px;
+                padding: 12px;
             }
 
             .skill-icon {
-                width: 45px;
-                height: 45px;
+                width: 40px;
+                height: 40px;
                 margin: 0 auto;
             }
 
             .skill-icon i {
-                font-size: 1.3rem;
+                font-size: 1.2rem;
             }
 
             .skill-content h4 {
-                font-size: 1rem;
-            }
-
-            .skill-content p {
-                font-size: 0.85rem;
-            }
-
-            .project-tag {
-                font-size: 0.7rem;
-                padding: 3px 8px;
+                font-size: 0.95rem;
             }
         }
 
@@ -2371,7 +2355,6 @@
                             </div>
                             <div class="skill-content">
                                 <h4>Java</h4>
-                                <p>Spring Boot, JPA, Design Patterns</p>
                             </div>
                         </div>
                         <div class="skill-item">
@@ -2380,7 +2363,6 @@
                             </div>
                             <div class="skill-content">
                                 <h4>Python</h4>
-                                <p>Data Analysis, Automation, Scripting</p>
                             </div>
                         </div>
                         <div class="skill-item">
@@ -2389,7 +2371,6 @@
                             </div>
                             <div class="skill-content">
                                 <h4>JavaScript</h4>
-                                <p>ES6+, DOM Manipulation, AJAX</p>
                             </div>
                         </div>
                     </div>
@@ -2407,7 +2388,6 @@
                             </div>
                             <div class="skill-content">
                                 <h4>Spring Boot</h4>
-                                <p>REST API, Security, Microservices</p>
                             </div>
                         </div>
                         <div class="skill-item">
@@ -2416,7 +2396,6 @@
                             </div>
                             <div class="skill-content">
                                 <h4>Angular</h4>
-                                <p>TypeScript, Components, Services</p>
                             </div>
                         </div>
                         <div class="skill-item">
@@ -2425,7 +2404,6 @@
                             </div>
                             <div class="skill-content">
                                 <h4>Docker</h4>
-                                <p>Containerization, Docker Compose</p>
                             </div>
                         </div>
                     </div>
@@ -2443,7 +2421,6 @@
                             </div>
                             <div class="skill-content">
                                 <h4>MySQL</h4>
-                                <p>Database Design, Optimization, Security</p>
                             </div>
                         </div>
                         <div class="skill-item">
@@ -2452,7 +2429,6 @@
                             </div>
                             <div class="skill-content">
                                 <h4>Git/GitHub</h4>
-                                <p>Version Control, Collaboration, CI/CD</p>
                             </div>
                         </div>
                         <div class="skill-item">
@@ -2461,7 +2437,6 @@
                             </div>
                             <div class="skill-content">
                                 <h4>WordPress</h4>
-                                <p>Theme Development, Plugins, SEO</p>
                             </div>
                         </div>
                     </div>
@@ -2485,7 +2460,6 @@
                                         </div>
                                         <div class="skill-content">
                                             <h4>Java</h4>
-                                            <p>Spring Boot, JPA, Design Patterns</p>
                                         </div>
                                     </div>
                                     <div class="skill-item">
@@ -2494,7 +2468,6 @@
                                         </div>
                                         <div class="skill-content">
                                             <h4>Python</h4>
-                                            <p>Data Analysis, Automation, Scripting</p>
                                         </div>
                                     </div>
                                     <div class="skill-item">
@@ -2503,7 +2476,6 @@
                                         </div>
                                         <div class="skill-content">
                                             <h4>JavaScript</h4>
-                                            <p>ES6+, DOM Manipulation, AJAX</p>
                                         </div>
                                     </div>
                                 </div>
@@ -2522,7 +2494,6 @@
                                         </div>
                                         <div class="skill-content">
                                             <h4>Spring Boot</h4>
-                                            <p>REST API, Security, Microservices</p>
                                         </div>
                                     </div>
                                     <div class="skill-item">
@@ -2531,7 +2502,6 @@
                                         </div>
                                         <div class="skill-content">
                                             <h4>Angular</h4>
-                                            <p>TypeScript, Components, Services</p>
                                         </div>
                                     </div>
                                     <div class="skill-item">
@@ -2540,7 +2510,6 @@
                                         </div>
                                         <div class="skill-content">
                                             <h4>Docker</h4>
-                                            <p>Containerization, Docker Compose</p>
                                         </div>
                                     </div>
                                 </div>
@@ -2559,7 +2528,6 @@
                                         </div>
                                         <div class="skill-content">
                                             <h4>MySQL</h4>
-                                            <p>Database Design, Optimization, Security</p>
                                         </div>
                                     </div>
                                     <div class="skill-item">
@@ -2568,7 +2536,6 @@
                                         </div>
                                         <div class="skill-content">
                                             <h4>Git/GitHub</h4>
-                                            <p>Version Control, Collaboration, CI/CD</p>
                                         </div>
                                     </div>
                                     <div class="skill-item">
@@ -2577,7 +2544,6 @@
                                         </div>
                                         <div class="skill-content">
                                             <h4>WordPress</h4>
-                                            <p>Theme Development, Plugins, SEO</p>
                                         </div>
                                     </div>
                                 </div>
