--- a/index.html
+++ b/index.html
@@ -722,6 +722,7 @@
             margin-bottom: 20px;
             padding-bottom: 12px;
             border-bottom: 2px solid var(--border);
+            text-align: center;
         }
 
         .skill-category-header i {
@@ -739,6 +740,8 @@
             font-size: 1.2rem;
             font-weight: 700;
             white-space: nowrap;
+            display: flex;
+            align-items: center;
         }
 
         .skills-grid {
@@ -800,6 +803,8 @@
             font-size: 1.1rem;
             font-weight: 700;
             text-align: center;
+            display: flex;
+            align-items: center;
         }
 
         .skill-projects {
@@ -1876,6 +1881,9 @@
             .skill-category-header h3 {
                 font-size: 1.1rem;
                 white-space: nowrap;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
             .skill-item {
@@ -1899,6 +1907,9 @@
             .skill-content h4 {
                 font-size: 0.95rem;
                 text-align: center;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
         }
 
