--- a/index.html
+++ b/index.html
@@ -717,6 +717,7 @@
         .skill-category-header {
             display: flex;
             align-items: center;
+            justify-content: flex-start;
             gap: 15px;
             margin-bottom: 20px;
             padding-bottom: 12px;
@@ -738,6 +739,9 @@
             font-size: 1rem;
             font-weight: 700;
             white-space: nowrap;
+            display: flex;
+            align-items: center;
+            height: 100%;
         }
 
         .skills-grid {
@@ -749,6 +753,7 @@
         .skill-item {
             display: flex;
             align-items: center;
+            justify-content: flex-start;
             gap: 15px;
             padding: 15px;
             background: var(--bg);
@@ -802,6 +807,7 @@
             line-height: 1.2;
             display: flex;
             align-items: center;
+            height: 100%;
         }
 
         .skill-projects {
@@ -1881,6 +1887,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                height: auto;
             }
 
             .skill-item {
@@ -1907,6 +1914,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                height: auto;
             }
         }
 
