--- a/index.html
+++ b/index.html
@@ -722,6 +722,7 @@
             margin-bottom: 20px;
             padding-bottom: 12px;
             border-bottom: 2px solid var(--border);
+            height: 60px;
         }
 
         .skill-category-header i {
@@ -742,6 +743,7 @@
             display: flex;
             align-items: center;
             height: 100%;
+            line-height: 1;
         }
 
         .skills-grid {
@@ -783,6 +785,8 @@
             box-shadow: 0 4px 15px rgba(0, 123, 255, 0.2);
             transition: all 0.3s ease;
             margin: 0;
+            position: relative;
+            top: 0;
         }
 
         .skill-item:hover .skill-icon {
@@ -804,7 +808,7 @@
             color: var(--text);
             font-size: 1rem;
             font-weight: 700;
-            line-height: 1.2;
+            line-height: 1;
             display: flex;
             align-items: center;
             height: 100%;
@@ -1888,6 +1892,7 @@
                 align-items: center;
                 justify-content: center;
                 height: auto;
+                line-height: 1;
             }
 
             .skill-item {
@@ -1915,6 +1920,7 @@
                 align-items: center;
                 justify-content: center;
                 height: auto;
+                line-height: 1;
             }
         }
 
