--- a/index.html
+++ b/index.html
@@ -722,7 +722,6 @@
             margin-bottom: 20px;
             padding-bottom: 12px;
             border-bottom: 2px solid var(--border);
-            height: 60px;
         }
 
         .skill-category-header i {
@@ -740,10 +739,7 @@
             font-size: 1rem;
             font-weight: 700;
             white-space: nowrap;
-            display: flex;
-            align-items: center;
-            height: 100%;
-            line-height: 1;
+            line-height: 45px;
         }
 
         .skills-grid {
@@ -785,8 +781,6 @@
             box-shadow: 0 4px 15px rgba(0, 123, 255, 0.2);
             transition: all 0.3s ease;
             margin: 0;
-            position: relative;
-            top: 0;
         }
 
         .skill-item:hover .skill-icon {
@@ -808,10 +802,7 @@
             color: var(--text);
             font-size: 1rem;
             font-weight: 700;
-            line-height: 1;
-            display: flex;
-            align-items: center;
-            height: 100%;
+            line-height: 45px;
         }
 
         .skill-projects {
@@ -1888,11 +1879,7 @@
             .skill-category-header h3 {
                 font-size: 0.95rem;
                 white-space: nowrap;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                height: auto;
-                line-height: 1;
+                line-height: 40px;
             }
 
             .skill-item {
@@ -1916,11 +1903,7 @@
             .skill-content h4 {
                 font-size: 0.9rem;
                 text-align: center;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                height: auto;
-                line-height: 1;
+                line-height: 40px;
             }
         }
 
