--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
             font-size: 1rem;
             font-weight: 700;
             white-space: nowrap;
-            line-height: 45px;
+            padding-top: 12px;
         }
 
         .skills-grid {
@@ -802,7 +802,7 @@
             color: var(--text);
             font-size: 1rem;
             font-weight: 700;
-            line-height: 45px;
+            padding-top: 12px;
         }
 
         .skill-projects {
@@ -1879,7 +1879,7 @@
             .skill-category-header h3 {
                 font-size: 0.95rem;
                 white-space: nowrap;
-                line-height: 40px;
+                padding-top: 8px;
             }
 
             .skill-item {
@@ -1903,7 +1903,7 @@
             .skill-content h4 {
                 font-size: 0.9rem;
                 text-align: center;
-                line-height: 40px;
+                padding-top: 8px;
             }
         }
 
