--- a/index.html
+++ b/index.html
@@ -717,8 +717,7 @@
         .skill-category-header {
             display: flex;
             align-items: center;
-            justify-content: flex-start;
-            gap: 15px;
+            justify-content: center;
             margin-bottom: 20px;
             padding-bottom: 12px;
             border-bottom: 2px solid var(--border);
@@ -736,10 +735,10 @@
         .skill-category-header h3 {
             margin: 0;
             color: var(--text);
-            font-size: 1rem;
+            font-size: 1.2rem;
             font-weight: 700;
             white-space: nowrap;
-            padding-top: 12px;
+            text-align: center;
         }
 
         .skills-grid {
@@ -1868,18 +1867,12 @@
                 flex-direction: column;
                 text-align: center;
                 justify-content: center;
-                gap: 8px;
-            }
-
-            .skill-category-header i {
-                font-size: 1.4rem;
-                padding: 8px;
             }
 
             .skill-category-header h3 {
-                font-size: 0.95rem;
+                font-size: 1.1rem;
                 white-space: nowrap;
-                padding-top: 8px;
+                text-align: center;
             }
 
             .skill-item {
@@ -2342,7 +2335,6 @@
             <div class="card-grid">
                 <div class="card animate-on-scroll">
                     <div class="skill-category-header">
-                        <i class="fas fa-code"></i>
                         <h3 data-i18n="skills.section1">Linguaggi di Programmazione</h3>
                     </div>
                     <div class="skills-grid">
@@ -2375,7 +2367,6 @@
                 
                 <div class="card animate-on-scroll">
                     <div class="skill-category-header">
-                        <i class="fas fa-layer-group"></i>
                         <h3 data-i18n="skills.section2">Framework & Tecnologie</h3>
                     </div>
                     <div class="skills-grid">
@@ -2408,7 +2399,6 @@
                 
                 <div class="card animate-on-scroll">
                     <div class="skill-category-header">
-                        <i class="fas fa-database"></i>
                         <h3 data-i18n="skills.section3">Database & Strumenti</h3>
                     </div>
                     <div class="skills-grid">
@@ -2447,7 +2437,6 @@
                         <div class="carousel-slide">
                             <div class="card">
                                 <div class="skill-category-header">
-                                    <i class="fas fa-code"></i>
                                     <h3 data-i18n="skills.section1">Linguaggi di Programmazione</h3>
                                 </div>
                                 <div class="skills-grid">
@@ -2481,7 +2470,6 @@
                         <div class="carousel-slide">
                             <div class="card">
                                 <div class="skill-category-header">
-                                    <i class="fas fa-layer-group"></i>
                                     <h3 data-i18n="skills.section2">Framework & Tecnologie</h3>
                                 </div>
                                 <div class="skills-grid">
@@ -2515,7 +2503,6 @@
                         <div class="carousel-slide">
                             <div class="card">
                                 <div class="skill-category-header">
-                                    <i class="fas fa-database"></i>
                                     <h3 data-i18n="skills.section3">Database & Strumenti</h3>
                                 </div>
                                 <div class="skills-grid">
