--- a/index.html
+++ b/index.html
@@ -2058,7 +2058,7 @@
             <!-- PROFILE IMAGE - COMMENTATO TEMPORANEAMENTE
             <img src="https://via.placeholder.com/180x180/3b82f6/ffffff?text=MD" alt="Marco De Luca" class="profile-img">
             -->
-            <h1 data-i18n="name">Marco De Luca</h1>
+            <img src="logo.png" alt="Marco De Luca" class="header-logo">
             <p class="tagline" data-i18n="tagline">Consulente IT | Sviluppatore Web | Specialista in Sicurezza Informatica</p>
             
             <div class="contact-info">
