--- a/index.html
+++ b/index.html
@@ -1997,7 +1997,7 @@
         
         /* Stili per il logo nell'header */
         .header-logo {
-            max-width: 200px;
+            max-width: 120px; /* RIDOTTO da 200px a 120px per PC */
             height: auto;
             margin-bottom: 20px;
             display: block;
@@ -2009,14 +2009,14 @@
         /* Responsive per mobile */
         @media (max-width: 768px) {
             .header-logo {
-                max-width: 150px;
+                max-width: 100px; /* AUMENTATO da 150px a 100px per tablet */
                 margin-bottom: 15px;
             }
         }
         
         @media (max-width: 480px) {
             .header-logo {
-                max-width: 120px;
+                max-width: 80px; /* AUMENTATO da 120px a 80px per mobile */
                 margin-bottom: 12px;
             }
         }
