--- a/index.html
+++ b/index.html
@@ -1996,32 +1996,31 @@
         }
         
         /* Stili per il logo nell'header */
-.header-logo {
-    max-width: 80px; /* Dimensione più piccola per desktop */
-    height: auto;
-    margin-bottom: 20px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    filter: brightness(0) invert(1); /* Rende il logo bianco per contrastare con lo sfondo blu */
-}
+        .header-logo {
+            max-width: 30px !important; /* DIMENSIONE MOLTO PICCOLA PER TEST */
+            height: auto;
+            margin-bottom: 20px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            filter: brightness(0) invert(1); /* Rende il logo bianco per contrastare con lo sfondo blu */
+        }
 
-/* Responsive per tablet */
-@media (max-width: 768px) {
-    .header-logo {
-        max-width: 120px; /* TABLET: logo medio */
-        margin-bottom: 15px;
-    }
-}
+        /* Responsive per tablet */
+        @media (max-width: 768px) {
+            .header-logo {
+                max-width: 120px; /* TABLET: logo medio */
+                margin-bottom: 15px;
+            }
+        }
 
-/* Responsive per mobile */
-@media (max-width: 480px) {
-    .header-logo {
-        max-width: 150px; /* MOBILE: logo grande */
-        margin-bottom: 12px;
-    }
-}
-
+        /* Responsive per mobile */
+        @media (max-width: 480px) {
+            .header-logo {
+                max-width: 150px; /* MOBILE: logo grande */
+                margin-bottom: 12px;
+            }
+        }
         }
     </style>
     <noscript>
