--- a/index.html
+++ b/index.html
@@ -1997,7 +1997,7 @@
         
         /* Stili per il logo nell'header */
         .header-logo {
-            max-width: 30px !important; /* DIMENSIONE MOLTO PICCOLA PER TEST */
+            max-width: 70px; /* DIMENSIONE MOLTO PICCOLA PER TEST */
             height: auto;
             margin-bottom: 20px;
             display: block;
@@ -2020,7 +2020,6 @@
                 max-width: 150px; /* MOBILE: logo grande */
                 margin-bottom: 12px;
             }
-        }
         }
     </style>
     <noscript>
