--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
         /* Stili per il logo nell'header */
         .header-logo {
-            max-width: 80px !important; /* DESKTOP: logo piccolo */
+            max-width: 500px; /* DESKTOP: logo piccolo */
             height: auto;
             margin-bottom: 20px;
             display: block;
@@ -69,7 +69,7 @@
         /* Responsive per tablet */
         @media (max-width: 768px) {
             .header-logo {
-                max-width: 120px; /* TABLET: logo medio */
+                max-width: 300px; /* TABLET: logo medio */
                 margin-bottom: 15px;
             }
         }
@@ -77,7 +77,7 @@
         /* Responsive per mobile */
         @media (max-width: 480px) {
             .header-logo {
-                max-width: 150px; /* MOBILE: logo grande */
+                max-width: 250px; /* MOBILE: logo grande */
                 margin-bottom: 12px;
             }
         }
